--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -63,7 +63,7 @@
 }
 
 \newcommand{\employer} [3] {
-    { \textsc{#1} (#2)\\ \underline{\textsc{\emph{#3}}}\\  }
+    { \textsc{#1} (#2)\\ \underline{\textsc{\textit{#3}}}\\  }
 }
 
 \newcommand{\contact} [3] {
@@ -110,18 +110,22 @@
 \header{Work and Research Experience} \\
 \vspace{1mm}
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
-\textit{Sales and Marketing Analyst, IT} \hfill  \emph{May 2023 --- Present} \\
+\textit{TM1 Developer, Finance and Operations} \hfill \textit{October 2023 --- Present} \\
 \begin{itemize}
-    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis (PAW, PAfE, ETL, MDX, Cognos Command Center, Arc, Pulse)
-    \item Creating and maintaining cubes, dimensions, subsets, and views in TM1 development, UAT, and production 
+    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis incorporating first- and third-party tools (PAW, PAfE, MDX, Cognos Command Center, Arc, Pulse)
+    \item Programmatically creating and maintaining cubes, dimensions, subsets, control objects, security, applications, and views in TM1 development, UAT, and production environments
+    \item Loading and transforming job scrub, GL, and budget data from ODBC SQL connections and developing and maintaining cash flow applications on KPIs, milestones, and major codes for accounting team
+\end{itemize}
+\textit{Sales and Marketing Analyst, IT} \hfill  \textit{May 2023 --- Present} \\
+\begin{itemize}
     \item Implementing, testing, and training Salesforce development, UAT, and production environments for 200 users (Salesforce CRM, Marketing Cloud, Sales Cloud, Data Loader) 
-    \item Querying relational databases to validate and clean data for migration into Salesforce (SQL, Python)
-    \item Creating Salesforce reports, dashboards, flows, cadences, and email templates for management and end users
+    \item Designing and implementing Salesforce workflows, cadences, and flows for internal sales and marketing teams
+    \item Creating Salesforce reports, dashboards, and email templates for leadership 
 \end{itemize}
 \vspace{1mm}
 
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
-\textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
+\textit{Support Engineer} \hfill  \textit{June 2022 --- May 2023} \\
 \begin{itemize}
     \item Troubleshooted, built, and tested Laserfiche automation Workflow, Quick Fields, and Form processes
     \item Maintained non-clustered SQL servers (stored procedures, task scheduler, SSL certs, TLS config)
@@ -131,39 +135,39 @@
 \vspace{1mm}
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
-\textit{Economic Research Assistant} \hfill  \emph{Aug 2020 --- May 2022} \\
+\textit{Economic Research Assistant} \hfill  \textit{Aug 2020 --- May 2022} \\
 \begin{itemize}
     \item Investigated relevant literature for, revised, and edited book chapters and journal articles
 \end{itemize}
 \vspace{1mm}
 
 \textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
-\textit{EC Harwood Visiting Research Fellow} \hfill  \emph{Dec 2018 --- May 2019}\\
+\textit{EC Harwood Visiting Research Fellow} \hfill  \textit{Dec 2018 --- May 2019}\\
 \vspace{1mm}
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
-\textit{Visiting Research Scholar} \hfill  \emph{Sep 2018 --- Dec 2018}\\
+\textit{Visiting Research Scholar} \hfill  \textit{Sep 2018 --- Dec 2018}\\
 % \begin{itemize}
 %     \item Researched and presented master's thesis: economic analysis of open-source communities
 % \end{itemize}
 \vspace{1mm}
 
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
-\textit{Research Fellow} \hfill  \emph{Jan 2017 --- May 2017}\\
-\begin{itemize}
-    \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
-    \item Wrote and edited two weekly publications regarding Pennsylvania's budget and education policy
-    \item Responded to daily email inquiries regarding subsidies, right-to-work laws, and the state budget
-\end{itemize}
+\textit{Research Fellow} \hfill  \textit{Jan 2017 --- May 2017}\\
+% \begin{itemize}
+%     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
+%     \item Wrote and edited two weekly publications regarding Pennsylvania's budget and education policy
+%     \item Responded to daily email inquiries regarding subsidies, right-to-work laws, and the state budget
+% \end{itemize}
 \vspace{1mm}
 
 \textbf{Cato Institute} \hfill Washington, DC\\
-\textit{Intern Researcher at the Center for Educational Freedom} \hfill \emph{Sep 2016 --- Dec 2016}\\
-\begin{itemize}
-    \item Compiled and examined TIMSS and PISA datasets related to national education policy
-    \item Summarized Capitol Hill proceedings regarding foreign affairs, trade, monetary, and education
-    \item Produced over 200 Twitter/X posts on @HumanProgress
-\end{itemize}
+\textit{Intern Researcher at the Center for Educational Freedom} \hfill \textit{Sep 2016 --- Dec 2016}\\
+% \begin{itemize}
+%     \item Compiled and examined TIMSS and PISA datasets related to national education policy
+%     \item Summarized Capitol Hill proceedings regarding foreign affairs, trade, monetary, and education
+%     \item Produced over 200 Twitter/X posts on @HumanProgress
+% \end{itemize}
 \vspace{1mm}
 
 %==== Education ====%
@@ -171,7 +175,7 @@
 \header{Education} \\
 \vspace{1mm}
 \textbf{Texas Tech University, Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
-\textit{Master of Science in Agricultural and Applied Economics} \hfill  \emph{May 2022} \\
+\textit{Master of Science in Agricultural and Applied Economics} \hfill  \textit{May 2022} \\
 \begin{itemize}
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
@@ -182,14 +186,14 @@
 \vspace{1mm}
 
 \textbf{CEVRO Institute, School of Political Studies}\hfill Prague, Czech Republic\\
-\textit{Master of Arts in Political Science, Philosophy, and Economics (PPE)} \hfill  \emph{Jun 2019}\\
+\textit{Master of Arts in Political Science, Philosophy, and Economics (PPE)} \hfill  \textit{Jun 2019}\\
 \begin{itemize}
     \item \textbf{Scholarship:} Full Tuition for Excellence
 \end{itemize}
 \vspace{1mm}
 
 \textbf{University of Michigan, College of Literature, Science, and the Arts} \hfill Ann Arbor, MI\\
-\textit{Bachelor of Arts in General Studies (Political Science, Philosophy, and History)} \hfill  \emph{Apr 2016}\\
+\textit{Bachelor of Arts in General Studies (Political Science, Philosophy, and History)} \hfill  \textit{Apr 2016}\\
 
 \vspace{1mm}
 %==== Certificates ====%
@@ -197,23 +201,23 @@
 \header{Certifications and Exams} \\
 \vspace{1mm}
 \begin{itemize}
-    \item PostgreSQL for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/LDV5VWF4QFUE}{LDV5VWF4QFUE}) \hfill Coursera, \emph{May 2024}
+    \item PostgreSQL for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/LDV5VWF4QFUE}{LDV5VWF4QFUE}) \hfill Coursera, \textit{May 2024}
     \begin{itemize}
         \item PostgreSQL, DBeaver, NoSQL, Elasticsearch
     \end{itemize}
-    \item Web Applications for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/K85V99DMXY4U}{K85V99DMXY4U}) \hfill Coursera, \emph{Oct 2023}
+    \item Web Applications for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/K85V99DMXY4U}{K85V99DMXY4U}) \hfill Coursera, \textit{Oct 2023}
     \begin{itemize}
         \item MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
     \end{itemize}
-    \item Applied Data Science with Python Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill Coursera, \emph{Aug 2023}
+    \item Applied Data Science with Python Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill Coursera, \textit{Aug 2023}
     \begin{itemize}
         \item Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx), gradient descent, random forest, decision tree, SVC, linear and logistic regression, lasso, KNN, na\"{i}ve Bayes, clustering
     \end{itemize}
-    \item Django for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) \hfill Coursera, \emph{Jul 2023}
+    \item Django for Everybody Specialization (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) \hfill Coursera, \textit{Jul 2023}
     \begin{itemize}
         \item Django, SQLite3, HTML5, CSS, JavaScript, Bash
     \end{itemize}
-    \item Passed Probability exam \hfill Society of Actuaries, \emph{May 2023}
+    \item Passed Probability exam \hfill Society of Actuaries, \textit{May 2023}
 \end{itemize}
 \vspace{1mm}
 
