--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -110,22 +110,22 @@
 \header{Work and Research Experience} \\
 \vspace{1mm}
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
-\textit{TM1 Developer, Finance and Operations} \hfill \textit{October 2023 --- Present} \\
+\textit{TM1 Developer, Finance and Operations} \hfill \textit{Oct 2023 --- Present} \\
 \begin{itemize}
     \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis incorporating first- and third-party tools (PAW, PAfE, MDX, Cognos Command Center, Arc, Pulse)
     \item Programmatically creating and maintaining cubes, dimensions, subsets, control objects, security, applications, and views in TM1 development, UAT, and production environments
-    \item Loading and transforming job scrub, GL, and budget data from ODBC SQL connections and developing and maintaining cash flow applications on KPIs, milestones, and major codes for accounting team
+    \item Loading and transforming job scrub, GL, and budget data from ODBC SQL connections while developing and maintaining cash flow, KPIs, and milestone reporting for the finance and accounting team
 \end{itemize}
 \textit{Sales and Marketing Analyst, IT} \hfill  \textit{May 2023 --- Present} \\
 \begin{itemize}
     \item Implementing, testing, and training Salesforce development, UAT, and production environments for 200 users (Salesforce CRM, Marketing Cloud, Sales Cloud, Data Loader) 
     \item Designing and implementing Salesforce workflows, cadences, and flows for internal sales and marketing teams
-    \item Creating Salesforce reports, dashboards, and email templates for leadership 
+    \item Creating Salesforce reports, dashboards, and email templates for management 
 \end{itemize}
 \vspace{1mm}
 
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
-\textit{Support Engineer} \hfill  \textit{June 2022 --- May 2023} \\
+\textit{Support Engineer} \hfill  \textit{Jun 2022 --- May 2023} \\
 \begin{itemize}
     \item Troubleshooted, built, and tested Laserfiche automation Workflow, Quick Fields, and Form processes
     \item Maintained non-clustered SQL servers (stored procedures, task scheduler, SSL certs, TLS config)
