--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -112,14 +112,14 @@
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{TM1 Developer, Finance and Operations} \hfill \textit{Oct 2023 --- Present} \\
 \begin{itemize}
-    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis incorporating first- and third-party tools (PAW, PAfE, MDX, Cognos Command Center, Arc, Pulse)
+    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis incorporating first- and third-party tools (PAW, PAfE, MDX, Cognos Command Center, Arc, Pulse, TM1py)
     \item Programmatically creating and maintaining cubes, dimensions, subsets, control objects, security, applications, and views in TM1 development, UAT, and production environments
-    \item Loading and transforming job scrub, GL, and budget data from ODBC SQL connections while developing and maintaining cash flow, KPIs, and milestone reporting for the finance and accounting team
+    \item Extracting, loading, and transforming job scrub, GL, and budget data from ODBC SQL connections while developing and maintaining cash flow, KPIs, and milestone calculations and reporting for the finance and accounting teams
 \end{itemize}
 \textit{Sales and Marketing Analyst, IT} \hfill  \textit{May 2023 --- Present} \\
 \begin{itemize}
     \item Implementing, testing, and training Salesforce development, UAT, and production environments for 200 users (Salesforce CRM, Marketing Cloud, Sales Cloud, Data Loader) 
-    \item Designing and implementing Salesforce workflows, cadences, and flows for internal sales and marketing teams
+    \item Designing and implementing Salesforce workflows, cadences, and flows for the sales and marketing teams
     \item Creating Salesforce reports, dashboards, and email templates for management 
 \end{itemize}
 \vspace{1mm}
