--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -110,17 +110,19 @@
 \header{Work and Research Experience} \\
 \vspace{1mm}
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
-\textit{TM1 Developer, Finance and Operations} \hfill \textit{Oct 2023 --- Present} \\
+\textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Present} \\
+\hfill \textit{(Unofficially assisted starting Oct 2023)}
 \begin{itemize}
-    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis incorporating first- and third-party tools (PAW, PAfE, MDX, Cognos Command Center, Arc, Pulse, TM1py)
-    \item Programmatically creating and maintaining cubes, dimensions, subsets, control objects, security, applications, and views in TM1 development, UAT, and production environments
-    \item Extracting, loading, and transforming job scrub, GL, and budget data from ODBC SQL connections while developing and maintaining cash flow, KPIs, and milestone calculations and reporting for the finance and accounting teams
+    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, PAfE, Cognos Command Center, Arc, Pulse, TM1py, Git)
+    \item Programmatically creating and maintaining cubes, dimensions, attributes, subsets, control objects, security, applications, and views in TM1 development, UAT, and production environments
+    \item Extracting, transforming, and loading (ETL) job scrub, GL, and budget data from ODBC SQL connections while developing and maintaining cash flow, KPI, and milestone calculations and reporting for finance and accounting
 \end{itemize}
-\textit{Sales and Marketing Analyst, IT} \hfill  \textit{May 2023 --- Present} \\
+\vspace{1mm}
+\textit{Sales and Marketing Analyst, IT} \hfill  \textit{May 2023 --- Nov 2024} \\
 \begin{itemize}
-    \item Implementing, testing, and training Salesforce development, UAT, and production environments for 200 users (Salesforce CRM, Marketing Cloud, Sales Cloud, Data Loader) 
-    \item Designing and implementing Salesforce workflows, cadences, and flows for the sales and marketing teams
-    \item Creating Salesforce reports, dashboards, and email templates for management 
+    \item Implemented, tested, and trained Salesforce development, UAT, and production environments for 200+ users (Salesforce CRM, Marketing Cloud, Sales Cloud, Data Loader) 
+    \item Created Salesforce reports, dashboards, email templates, workflows, cadences, and flows for sales and marketing
+    \item System admin for business applications (Constellation NEWSTAR Sales \& Enterprise, BuildPro, Calendly, Docusign)
 \end{itemize}
 \vspace{1mm}
 
@@ -130,7 +132,7 @@
     \item Troubleshooted, built, and tested Laserfiche automation Workflow, Quick Fields, and Form processes
     \item Maintained non-clustered SQL servers (stored procedures, task scheduler, SSL certs, TLS config)
     \item Configured folder-, document-, and user-level security using admin consoles and active directory
-    \item Administered internal IT support
+    \item Administered internal IT support (workstation setups, hardware and software troubleshooting)
 \end{itemize}    
 \vspace{1mm}
 
