--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -113,8 +113,9 @@
 \textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Present} \\
 \hfill \textit{(Unofficially assisted starting Oct 2023)}
 \begin{itemize}
-    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, PAfE, Cognos Command Center, Arc, Pulse, TM1py, Git)
-    \item Programmatically creating and maintaining cubes, dimensions, attributes, subsets, control objects, security, applications, and views in TM1 development, UAT, and production environments
+    % \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, PAfE, Cognos Command Center, Arc, Pulse, TM1py, Git)
+    \item Implementing and maintaining stored backups and snapshots of production envrionemtnand TM1 cube data; restoring if necessary
+    \item Programmatically creating and manipulating cubes, dimensions, attributes, subsets, control objects, security, applications, and views in TM1 development, UAT, and production environments
     \item Extracting, transforming, and loading (ETL) job scrub, GL, and budget data from ODBC SQL connections while developing and maintaining cash flow, KPI, and milestone calculations and reporting for finance and accounting
 \end{itemize}
 \vspace{1mm}
