--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -17,7 +17,7 @@
     urlcolor=blue
 }
 
-\usepackage[margin=0.75in]{geometry}
+\usepackage[margin=0.7in]{geometry}
 \textheight=10in
 \pagestyle{empty}
 \raggedright
@@ -39,7 +39,7 @@
 
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage[scaled=0.86]{helvet}
+\usepackage[scaled=0.85]{helvet}
 \renewcommand\familydefault{\sfdefault}
 
 \renewcommand{\hrulefill}{%
@@ -111,18 +111,21 @@
 \vspace{1mm}
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Present} \\
-\hfill \textit{(Unofficially assisted starting Oct 2023)}
+% \hfill \textit{(Unofficially assisted starting Oct 2023)}
 \begin{itemize}
-    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, PAfE, Cognos Command Center, Arc, Pulse, TM1py, Git)
-    \item Programmatically creating and maintaining cubes, dimensions, attributes, subsets, control objects, security, applications, and views in TM1 development, UAT, and production environments
-    \item Extracting, transforming, and loading (ETL) job scrub, GL, and budget data from ODBC SQL connections while developing and maintaining cash flow, KPI, and milestone calculations and reporting for finance and accounting
+    % \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, PAfE, Cognos Command Center, Arc, Pulse, TM1py, Git)
+    \item Managing Git repository backups for processes and rules and compiling quarterly reports for change tracking and change management for the internal audit and restoring if necessary
+    \item Programmatically creating and manipulating cubes, dimensions, attributes, subsets, control objects, security, applications, and views in IBM TM1/Planning Analytics development, UAT, and production environments
+    \item Extracting, transforming, and loading (ETL) job scrub, GL, and budget data from ODBC SQL connections while developing automated calculations for cash flows, KPIs, and milestone financial and accounting models and reporting 
 \end{itemize}
 \vspace{1mm}
+
+
 \textit{Sales and Marketing Analyst, IT} \hfill  \textit{May 2023 --- Nov 2024} \\
 \begin{itemize}
     \item Implemented, tested, and trained Salesforce development, UAT, and production environments for 200+ users (Salesforce CRM, Marketing Cloud, Sales Cloud, Data Loader) 
     \item Created Salesforce reports, dashboards, email templates, workflows, cadences, and flows for sales and marketing
-    \item System admin for business applications (Constellation NEWSTAR Sales \& Enterprise, BuildPro, Calendly, Docusign)
+    \item System admin for ERP and business applications (Constellation NEWSTAR Sales \& Enterprise, BuildPro, Calendly, Docusign)
 \end{itemize}
 \vspace{1mm}
 
